@@ -116,6 +116,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5431: Date datatype is different between Hive 1.x and Hive 3.x (rohini)
+
 PIG-5433: Fix test failures with TestHBaseStorage and htrace dependency (rohini)
 
 PIG-5430: TestTezGraceParallelism failing due to tez log change (knoguchi)
